# simple-rust-coin

./: Cargo.toml
src/: block.rs  database.rs  main.rs  transaction.rs  wallet.rs
